--- a/index.html
+++ b/index.html
@@ -25,27 +25,78 @@
 					<ul class="ba-menu">
 						<li><a href="#">Recent Work</a></li>
 						<li><a href="#">Featured Product</a></li>
+						<li><a href="#"><img src="img/menu.png"></a></li>
 					</ul>
 				</nav>
 			</header>
 			<section class="ba-Black-White cf">
-				<div  class="ba-float-left">
+				<div  class="ba-col-1 ba-float-left">
 				<h1 class="ba-title">BLACK&amp; WHITE</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 					<a href="#">View Project</a>
 				</div>
-				<img  class="ba-float-left" src="img/image.png" alt="headphones">
-
+				<div class="ba-col-2 ba-float-left">
+					<img src="img/image.png" alt="headphones">
+				</div>
 			</section>
 			<div  class="ba-groups">
-				<a href="#"><div  class="ba-round"></div></a>
-				<a href="#"><div  class="ba-round"></div></a>
-				<a href="#"><div  class="ba-round"></div></a>
+				<a href="#"></a>
+				<a href="#"></a>
+				<a href="#"></a>
 			</div>
-		</div>
-		<main>
+			<section class="ba-Featured-Product">
+				<h2 class="ba-title">Featured Product</h2>
+				<img src="img/underline.png" alt="underline">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-		</main>
+				<div class="ba-grid-1 cf">
+					<div class="ba-col-1 ba-float-left">
+						<a href="#" class="ba-work">
+							<img src="img/beats.jpg" alt="beats">
+							<div class="ba-work__overlay">
+								<h3>Minimal Product Design</h3>
+							</div>
+						</a>
+					</div>
+					<div class="ba-col-2 ba-float-right">
+						<a href="#" class="ba-work">
+							<img src="img/headphones.jpg" alt="headphones">
+							<div class="ba-work__overlay">
+								<h3>Minimal Product Design</h3>
+							</div>
+						</a>
+					</div>
+				</div>
+
+				<div class="ba-grid-2 cf">
+					<div class="ba-col ba-float-left">
+						<a href="#" class="ba-work">
+							<img src="img/clock.jpg" alt="clock">
+							<div class="ba-work__overlay">
+								<h3>Minimal Product Design</h3>
+							</div>
+						</a>
+					</div>
+					<div class="ba-col ba-float-left">
+						<a href="#" class="ba-work">
+							<img src="img/boot.jpg" alt="boot">
+							<div class="ba-work__overlay">
+								<h3>Minimal Product Design</h3>
+							</div>
+						</a>
+					</div>
+					<div class="ba-col ba-float-right">
+						<a href="#" class="ba-work">
+							<img src="img/chair.jpg" alt="chair">
+							<div class="ba-work__overlay">
+								<h3>Minimal Product Design</h3>
+							</div>
+						</a>
+					</div>
+				</div>
+
+			</section>
+		</div>
 		<footer class="ba-footer">
 
 		</footer>
