--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/layout.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/slick.css" />
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -20,34 +23,59 @@
 	<body>
 		<div class="ba-container">
 			<header class="ba-header cf">
-				<a class="ba-logo ba-float-left" href="#">ProductMan</a>
+				<a class="ba-logo ba-float-left" href="#"><img src="img/logo.svg" alt="ProductMan"></a>
 				<nav class="ba-float-right">
 					<ul class="ba-menu">
-						<li><a href="#">Recent Work</a></li>
-						<li><a href="#">Featured Product</a></li>
-						<li><a href="#"><img src="img/menu.png"></a></li>
+						<li class="ba-open-close-1"><a href="#">Recent Work</a></li>
+						<li class="ba-open-close-2"><a href="#">Featured Product</a></li>
+						<li class="ba-toggle"><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a></li>
 					</ul>
 				</nav>
 			</header>
-			<section class="ba-Black-White cf">
-				<div  class="ba-col-1 ba-float-left">
-				<h1 class="ba-title">BLACK&amp; WHITE</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-					<a href="#">View Project</a>
+			<section class="ba-black-white cf">
+				<div class="ba-slider">
+
+					<div class="ba-slider__slide">
+						<div  class="ba-col-1 ba-float-left">
+							<h1 class="ba-title">BLACK&amp; WHITE</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+							<a href="#">View Project</a>
+						</div>
+						<div class="ba-col-2 ba-float-left">
+							<img src="img/image.png" alt="headphones">
+						</div>
+					</div>
+
+					<div class="ba-slider__slide">
+						<div  class="ba-col-1 ba-float-left">
+							<h1 class="ba-title">BLACK&amp; WHITE</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+							<a href="#">View Project</a>
+						</div>
+						<div class="ba-col-2 ba-float-left">
+							<img src="img/image.png" alt="headphones">
+						</div>
+					</div>
+
+					<div class="ba-slider__slide">
+						<div  class="ba-col-1 ba-float-left">
+							<h1 class="ba-title">BLACK&amp; WHITE</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+							<a href="#">View Project</a>
+						</div>
+						<div class="ba-col-2 ba-float-left">
+							<img src="img/image.png" alt="headphones">
+						</div>
+					</div>
+
 				</div>
-				<div class="ba-col-2 ba-float-left">
-					<img src="img/image.png" alt="headphones">
-				</div>
+
 			</section>
-			<div  class="ba-groups">
-				<a href="#"></a>
-				<a href="#"></a>
-				<a href="#"></a>
-			</div>
-			<section class="ba-Featured-Product">
+
+			<section class="ba-featured-product">
 				<h2 class="ba-title">Featured Product</h2>
 				<img src="img/underline.png" alt="underline">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p class="ba-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 				<div class="ba-grid-1 cf">
 					<div class="ba-col-1 ba-float-left">
@@ -96,9 +124,29 @@
 				</div>
 
 			</section>
-		</div>
-		<footer class="ba-footer">
 
-		</footer>
+			<footer class="ba-footer">
+				<h2 class="ba-title">PRODUCTMAN NEWS</h2>
+				<p class="ba-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				</p>
+				<form action="#" method="post" class="ba-form cf">
+					<i class="fa fa-envelope-o" aria-hidden="true"></i>
+					<input type="email" name="email" placeholder="Enter your email address" required>
+					<button type="submit">subscribe <i class="fa fa-caret-right" aria-hidden="true"></i></button>
+				</form>
+				<div class="ba-socials">
+					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-medium" aria-hidden="true"></i></a>
+				</div>
+				<p class="ba-copyright">© Copyright <a href=""> Your Company </a> ltd 2016. All Rights Reserved.</p>
+
+			</footer>
+		</div>
+
+		<script src="js/jquery-3.1.1.min.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 	</html>
