--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<nav class="ba-float-right">
 					<ul class="ba-menu">
 						<li class="ba-open-close-1"><a href="#">Recent Work</a></li>
-						<li class="ba-open-close-2"><a href="#">Featured Product</a></li>
+						<li class="ba-open-close-2"><a href="#featured">Featured Product</a></li>
 						<li class="ba-toggle"><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a></li>
 					</ul>
 				</nav>
@@ -72,7 +72,7 @@
 
 			</section>
 
-			<section class="ba-featured-product">
+			<section class="ba-featured-product" id="featured">
 				<h2 class="ba-title">Featured Product</h2>
 				<img src="img/underline.png" alt="underline">
 				<p class="ba-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
